added web project

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -77,13 +77,23 @@
         <% end %>
       </div>
     </div>
- 
+    
+    <br> 
+    
     <div class="row"> 
       <div class="col-md-4">
-        <%= link_to "http://sample-app-from-rails-tutorial.herokuapp.com/", class:"hvr-float-shadow", rel:'nofollow', target: "_blank" do %>
+        <%= link_to "https://sample-app-from-rails-tutorial.herokuapp.com/", class:"hvr-float-shadow", rel:'nofollow', target: "_blank" do %>
           Twitter Sample Application
         <% end %>
       </div>
+            
+      <div class="col-md-4">
+        <%= link_to "https://wishpond-test-lestleygabo.herokuapp.com/", class:"hvr-float-shadow", rel:'nofollow', target: "_blank" do %>
+          Wishpond Test Project
+        <% end %>
+      </div>
+      
+
     </div>
    
   <br>
@@ -107,6 +117,8 @@
         <% end %>
       </div>
     </div>  <!-- /div row of Robotics Research Co-op github and user manual -->
+        
+    <br> 
     
     <div class="row">
       <div class="col-md-4">
@@ -159,6 +171,9 @@
         <% end %>
       </div>
     </div> <!-- /div row of ENSC 477 - Biomedical Image Acquisition  -->
+        
+    <br> 
+    
     <div class="row">
       <div class="col-md-4">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNWWc3OUpiVmhXb3M/view", class:"hvr-float-shadow", rel:'nofollow', target: "_blank"  do %>
@@ -229,6 +244,9 @@
         <% end %>
       </div>
     </div> <!-- /div row of ENSC 305W/440W - Capstone Project -->
+        
+    <br> 
+    
     <div class="row"> 
       <div class="col-md-4">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNRmdtR0dvLVlDQjA/view", class:"hvr-float-shadow", rel:'nofollow', target: "_blank"  do %>
@@ -316,19 +334,22 @@
       </div>
       <div class="col-md-4">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNa3RxdkRLRE5lWW8/view", class:"hvr-float-shadow", rel:'nofollow', target: "_blank"  do %>
-          Lab 2 - Characterization of Diodes and simple diode Circuits
+          Lab 2 - Diodes and simple diode Circuits
         <% end %>
       </div>
     </div> <!-- /div row of ENSC 225 - Microelectronics I -->
+        
+    <br> 
+    
     <div class="row"> 
       <div class="col-md-4">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNUVRRVUJ4Z18wNU0/view", class:"hvr-float-shadow", rel:'nofollow', target: "_blank"  do %>
-          Lab 3 - Characterization of BJTs and single stage BJT amplifier
+          Lab 3 - BJTs and single stage BJT amplifier
         <% end %>
       </div>
       <div class="col-md-4">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNV013alNoNzF2UXc/view", class:"hvr-float-shadow", rel:'nofollow', target: "_blank"  do %>
-          Lab 4 - Characterization of MOSFETs and MOS amplifier
+          Lab 4 - MOSFETs and MOS amplifier
         <% end %>
       </div>
     </div> <!-- /div row of ENSC 225 - Microelectronics I -->
@@ -350,7 +371,7 @@
 
   <!-- button to go to top -->
   <!--<button onclick="topFunction()" class="hide-box" title="Go to top"> <h1>Go to top of page.</h1></button>-->
-  <div onclick="topFunction()" class="hvr-float-shadow" title="Go to top"><h3>Click to go to top of page.</h3></div>
+  <div onclick="topFunction()" class="hvr-float-shadow" title="Back to top"><h3>Back to top.</h3></div>
 </div> <!-- /div of class="home-callout text-center container-fluid" -->
 
 <!----------------------------------------------------------------------------->
