co-op title changed

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -98,7 +98,7 @@
    
   <br>
 
-    <h2> Robotics Research Co-op </h2>
+    <h2> Robotics Researcher Co-op </h2>
     <div class="row"> 
       <div class="col-md-4">
         <%= link_to "https://www.youtube.com/watch?v=ZmU-hsg7x38", class:"hvr-float-shadow", rel:'nofollow', target: "_blank" do %>
