add learn enough html to be dangerous page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -91,6 +91,12 @@
         <%= link_to "https://wishpond-test-lestleygabo.herokuapp.com/", class:"hvr-float-shadow", rel:'nofollow', target: "_blank" do %>
           Wishpond Test Project
         <% end %>
+      </div>      
+      
+      <div class="col-md-4">
+        <%= link_to "https://lestgabo.github.io/learn_enough_html/moby_dick", class:"hvr-float-shadow", rel:'nofollow', target: "_blank" do %>
+          Learn Enough HTML to Be Dangerous
+        <% end %>
       </div>
       
 
