--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,12 +26,12 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <%= link_to root_path, class: "navbar-brand hvr-float-shadow" do %>
-              Lestley Links
-            <% end %>
           </div>
           <div class="collapse navbar-collapse navbar-test" id="main-nav-collapse">
-            <ul class="nav navbar-nav navbar-right">
+            <ul class="nav navbar-nav navbar-center">
+                          <li>    <%= link_to root_path, class: "navbar-brand hvr-float-shadow" do %>
+              Lestley Links
+            <% end %>        </li>
               <li>
                 <%= link_to new_contact_path, class:"navbar-brand hvr-float-shadow" do %>
                   <i class= "fa fa-envelope-open-o"></i>
