--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,16 +1,9 @@
 <div class="home-callout-contact text-center container-fluid">
-  <div class='jumbotron'>
-    <h1><strong> Contact Lestley </strong></h1>
-  </div>
-  
-  
-  
-  
   <div class="container">
-      <hr>
     <div class="row">
       <div class="col-md-4 col-md-offset-4">
         <div class="well">
+          <h1 id="contact-h1">Contact Lestley</h1>
           <%= form_for @contact do |f| %>
           
             <div class="form-group">
