--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,6 @@
-<div class="home-callout text-center container-fluid">
   <!--<h4>This page contains links to my LinkedIn, GitHub, and HackerRank profiles.</h4>-->
   <!--<h4>It also contains links to my projects, completed or otherwise.</h4>-->
-
-  <div class="container text-left">
-    <hr>
+  <div class="container text-center">
     <h1 ><strong> Profiles </strong></h1>
     <div class="row">  
       <div class="col-md-4">
@@ -27,7 +24,6 @@
     </div>
   </div> <!-- /div row of Container for Profiles -->
 
-</div> <!-- /div of class="home-callout text-center container-fluid" -->
 
 <!----------------------------------------------------------------------------->
 
