--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,20 +1,3 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- 
- *= require hover
- *= require_tree .
- *= require_self
- */
 
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
@@ -62,13 +45,13 @@ body {
 .navbar, .home-callout, .home-callout-contact, .not-name-container {
   //Gradient provided by @_ighosh at uiGradients.com
   // ServQuick from uiGradients.com
-  // background: #ece9e6; /* fallback for old browsers */
-  // background: -webkit-linear-gradient(to right, #ece9e6, #ffffff); /* Chrome 10-25, Safari 5.1-6 */
-  // background: linear-gradient(to right, #ece9e6, #ffffff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background: black;
+  background: #ece9e6; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #ece9e6, #ffffff); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #ece9e6, #ffffff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  // background: blue;
 }
 .navbar-test {
-  border-radius: 10px;
+  border-radius: 100px;
   background: #ece9e6; /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #ece9e6, #ffffff); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #ece9e6, #ffffff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -87,14 +70,23 @@ body {
   border: none;
 }
 
-.navbar-brand {
+.navbar-default {
   font-family: 'Open Sans', sans-serif;
   font-weight: 800;
 }
 
+.navbar .navbar-nav {
+    display: inline-block;
+    float: none;
+}
+
+.navbar .navbar-collapse {
+    text-align: center;
+}
+
 .navbar-default .navbar-collapse, .navbar-default .navbar-form {
     padding: 0px 10px;
-    margin: 0px 50px;
+    margin: 0px 30px;
 }
 
 .navbar-default .navbar-brand, 
@@ -122,18 +114,23 @@ body {
 // Homepage Styles
 .home-callout {
   color:323232;
-  margin-top: -20px;
+  margin-top: -60px;
   padding-top: 30px;
   padding-bottom: 60px;
   padding-left: 0px;
   padding-right: 0px; 
 }
 
+// contact page well
+#contact-h1 {
+  margin-top: 0px;
+}
+
 // style of container for the contact page
 // padding-bottom=360.50px so it reaches the bottom of a 1920x1080 monitor
 .home-callout-contact {
   color:323232;
-  margin-top: -20px;
+  margin-top: -10px;
   padding-top: 30px;
   padding-bottom: 360.50px;
   //padding-bottom: 20%;
@@ -178,6 +175,8 @@ body {
      transform: translateY(3px);
    }
 }
+
+
 
 
 ////////////////////////////////////////////////////////////////////
