--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -1,6 +1,5 @@
-  <div class="container text-left">
+  <div class="container text-center">
     <h1><strong> Projects </strong></h1>
-    
     <h2> Web Development </h2>
     <div class="row"> 
       <div class="col-md-4">
