--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -1,7 +1,5 @@
-  <br>
-
-  <div class="container text-left">
-    <h1 ><strong> Resume </strong></h1>
+  <div class="container text-center">
+    <h1><strong> Resume </strong></h1>
     <div class="row"> 
       <div class="col-md-4">
         <!--Resume-->
@@ -20,3 +18,21 @@
    </div> <!-- /div row of Container for Resume -->
 
   <br>
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
