--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -35,10 +35,15 @@ body {
   margin-bottom: 0;
 }
 
+.navbar > .container .navbar-brand, .navbar > .container-fluid .navbar-brand {
+  margin-left: 0px;
+  padding: 0px 50px;
+}
+
 .alert-width {
   width: 100%;
-  padding: 0;
-  margin: 0;
+  padding: 0px;
+  margin: 0px;
 }
 
 // Background gradient
@@ -49,6 +54,20 @@ body {
   background: -webkit-linear-gradient(to right, #ece9e6, #ffffff); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #ece9e6, #ffffff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   // background: blue;
+}
+
+// active nav-bar color
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active 
+  > a:hover, .navbar-default .navbar-nav > .active > a:focus {
+    color: #555;
+    background-color: #ece9e6;
+    // background-color: black;
+    mix-blend-mode: darken;
+    padding-bottom: 20px;
+}
+
+.nav-item {
+  padding: 0px 0px;
 }
 .navbar-test {
   border-radius: 100px;
@@ -78,6 +97,7 @@ body {
 .navbar .navbar-nav {
     display: inline-block;
     float: none;
+    // margin: 0px 0px;
 }
 
 .navbar .navbar-collapse {
@@ -86,7 +106,7 @@ body {
 
 .navbar-default .navbar-collapse, .navbar-default .navbar-form {
     padding: 0px 10px;
-    margin: 0px 30px;
+    margin: 0px 110px;
 }
 
 .navbar-default .navbar-brand, 
