add font awesome icons

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,27 +1,76 @@
   <!--<h4>This page contains links to my LinkedIn, GitHub, and HackerRank profiles.</h4>-->
-  <!--<h4>It also contains links to my projects, completed or otherwise.</h4>-->
   <div class="container text-center">
     <h1 ><strong> Profiles </strong></h1>
+      <!-- first row -->
     <div class="row">  
-      <div class="col-md-4">
+      <div class="col-md-offset-3 col-md-3">
         <%= link_to "//www.linkedin.com/in/lestgabo/", class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
           <i class= "fa fa-linkedin-square"></i>
-          LinkedIn
+          <h3>LinkedIn</h3>
         <% end %>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3">
         <%= link_to "//github.com/lestgabo", class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
           <i class= "fa fa-github-square"></i>
-          GitHub
+          <h3>GitHub</h3>
         <% end %>
       </div>
-      <div class="col-md-4">
+    </div>  
+
+<br>
+        <!-- row -->
+    <div class="row">  
+      <div class="col-md-offset-3 col-md-3">
+        <%= link_to "https://www.facebook.com/notthinkingstraight", class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
+          <i class= "fa fa-facebook-square"></i>
+          <h3>Facebook</h3>
+        <% end %>
+      </div>
+      <div class="col-md-3">
+        <%= link_to "https://www.instagram.com/lestgabo/", class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
+          <i class= "fa fa-instagram"></i>
+          <h3>Instagram</h3>
+        <% end %>
+      </div>
+    </div>    
+    
+<br>
+        <!-- row -->
+    <div class="row">
+      <div class="col-md-offset-3 col-md-3">
+        <%= link_to "https://steamcommunity.com/id/notthinkingstraight", class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
+          <i class= "fa fa-steam"></i>
+          <h3>Steam</h3>
+        <% end %>
+      </div>        
+      <div class="col-md-3">
+        <%= link_to "https://my.playstation.com/profile/yelnatz/trophies", class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
+          <!--<i class= "fa fa-playstation"></i>-->
+          <i class="fa fa-playstation"></i>
+          <!--<%= image_tag "/playstation-brands.svg" %>-->
+          <h3>Playstation</h3>
+        <% end %>
+      </div>      
+    </div>   
+    
+<br>
+        <!-- last row -->
+    <div class="row">
+      <div class="col-md-offset-3 col-md-3">
         <%= link_to "//www.hackerrank.com/beeftosino", class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
           <i class= "fa fa-h-square"></i>
-          HackerRank
+          <h3>HackerRank</h3>
+        <% end %>
+      </div>      
+      <div class="col-md-3">
+        <%= link_to "https://myanimelist.net/animelist/beeftosino?status=2", class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
+          <i class= "fa fa-list-ul"></i>
+          <h3>MyAnimeList</h3>
         <% end %>
       </div>
-    </div>
+    </div>   
+    
+<br>
   </div> <!-- /div row of Container for Profiles -->
 
 
