--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -31,19 +31,19 @@ body {
 //   padding-left: 3em;
 // }
 
-.navbar-static-top {
-  margin-bottom: 0;
-}
-
-.navbar > .container .navbar-brand, .navbar > .container-fluid .navbar-brand {
-  margin-left: 0px;
-  padding: 0px 50px;
-}
 
 .alert-width {
   width: 100%;
   padding: 0px;
   margin: 0px;
+}
+
+///////////////// Nav Styles
+
+// the button that appears when zoomed in
+.navbar-toggle {
+  // display: inline-block;
+  float: none;
 }
 
 // Background gradient
@@ -60,10 +60,21 @@ body {
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active 
   > a:hover, .navbar-default .navbar-nav > .active > a:focus {
     color: #555;
-    background-color: #ece9e6;
-    // background-color: black;
+    background: #ece9e6;
+    // background: #ece9e6; /* fallback for old browsers */
+    // background: -webkit-linear-gradient(to right, #ece9e6, #ffffff); /* Chrome 10-25, Safari 5.1-6 */
+    // background: linear-gradient(to right, #ece9e6, #ffffff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     mix-blend-mode: darken;
     padding-bottom: 20px;
+}
+
+.navbar-static-top {
+  margin-bottom: 0;
+}
+
+.navbar > .container .navbar-brand, .navbar > .container-fluid .navbar-brand {
+  margin-left: 0px;
+  padding: 0px 50px;
 }
 
 .nav-item {
@@ -76,15 +87,6 @@ body {
   background: linear-gradient(to right, #ece9e6, #ffffff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-.jumbotron {
-  // background color becomes not white
-  background-color: inherit;
-  
-  // too much space from name to profile
-  margin-bottom: 0px;
-}
-
-// Nav Styles
 .navbar {
   border: none;
 }
@@ -131,7 +133,15 @@ body {
   }
 }
 
-// Homepage Styles
+///////////////////////////// Homepage Styles
+.jumbotron {
+  // background color becomes not white
+  background-color: inherit;
+  
+  // too much space from name to profile
+  margin-bottom: 0px;
+}
+
 .home-callout {
   color:323232;
   margin-top: -60px;
@@ -139,6 +149,8 @@ body {
   padding-bottom: 60px;
   padding-left: 0px;
   padding-right: 0px; 
+  // 1vh = 1% of browser screen height
+  height: 100vh;
 }
 
 // contact page well
