--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -1,3 +1,4 @@
+<!--<h4>This page contains links to my projects, completed or otherwise.</h4>-->
   <div class="container text-center">
     <h1><strong> Projects </strong></h1>
     <h2> Web Development </h2>
