add custom Playstation svg icon

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -46,8 +46,8 @@
       <div class="col-md-3">
         <%= link_to "https://my.playstation.com/profile/yelnatz/trophies", class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
           <!--<i class= "fa fa-playstation"></i>-->
-          <i class="fa fa-playstation"></i>
-          <!--<%= image_tag "/playstation-brands.svg" %>-->
+          <!--<%= image_tag "playstation-brands.svg" %>-->
+          <%= show_svg("playstation-brands.svg") %>
           <h3>Playstation</h3>
         <% end %>
       </div>      
