fix playstation icon - font awesome didn't work

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -46,8 +46,7 @@
       <div class="col-md-3">
         <%= link_to "https://my.playstation.com/profile/yelnatz/trophies", class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
           <!--<i class= "fa fa-playstation"></i>-->
-          <!--<%= image_tag "playstation-brands.svg" %>-->
-          <%= show_svg("playstation-brands.svg") %>
+          <i class="fa"><%= show_svg("playstation-brands.svg") %></i>
           <h3>Playstation</h3>
         <% end %>
       </div>      
