--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,6 +23,16 @@ body {
   font-weight: bold;
 }
 
+.fa {
+  font-size: 120px;
+}
+
+svg:not(:root) {
+  overflow: hidden;
+  width: 110px;
+  // height: auto;
+}
+
 // tabs, using padding to make tabs
 // h2 {
 //   padding-left: 1em;
@@ -150,7 +160,9 @@ body {
   padding-left: 0px;
   padding-right: 0px; 
   // 1vh = 1% of browser screen height
-  height: 100vh;
+  // height: 100vh;
+  height: 100% auto;
+  
 }
 
 // contact page well
