--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,8 @@
       <nav class="navbar navbar-default" role="navigation">
         <div class='container'>
           <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav-collapse">
+            <button type="button" class="navbar-toggle" 
+            data-toggle="collapse" data-target="#main-nav-collapse">
               <span class="sr-only">Toggle navigation</span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
@@ -29,13 +30,21 @@
           </div>
           <div class="collapse navbar-collapse navbar-test" id="main-nav-collapse">
             <ul class="nav navbar-nav">
-              <li class="navbar-brand nav-item <%= "active" if current_page?(root_path) %>">
-                <%= link_to "Profiles", root_path %></li>                
-              <li class="navbar-brand nav-item <%= "active" if current_page?(resume_path) %>">
-                <%= link_to "Resume", resume_path %></li>                
-              <li class="navbar-brand nav-item <%= "active" if current_page?(projects_path) %>">
-                <%= link_to "Projects", projects_path %></li>                
-              <li class="navbar-brand nav-item <%= "active" if current_page?(new_contact_path) %>">
+              
+              <li class="navbar-brand nav-item 
+              <%= "active" if current_page?(root_path) %>">
+                <%= link_to "Profiles", root_path %></li>    
+                
+              <li class="navbar-brand nav-item 
+              <%= "active" if current_page?(resume_path) %>">
+                <%= link_to "Resume", resume_path %></li>   
+                
+              <li class="navbar-brand nav-item 
+              <%= "active" if current_page?(projects_path) %>">
+                <%= link_to "Projects", projects_path %></li>   
+                
+              <li class="navbar-brand nav-item 
+              <%= "active" if current_page?(new_contact_path) %>">
                 <%= link_to "Contact", new_contact_path %></li>  
             </ul>
           </div><!-- collapse navbar-collapse -->
@@ -47,9 +56,9 @@
           <%= content_tag :div, msg, class: "alert alert-#{type}" %>
         <% end %>
       </div>
-      <div class="home-callout container-fluid">
-        <%= yield %>
-      </div><!-- /div of class="home-callout text-center container-fluid" -->
     </div>
+        
+        <%= yield %>
+        
   </body>
 </html>
