--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -1,25 +1,28 @@
 <!--<h4>This page contains links to resume</h4>-->
+<!--<div class="home-callout container-fluid">-->
+<div class="home-callout-parts text-center container-fluid">
   <div class="container text-center">
-    <h1><strong> Resume </strong></h1>
+    <!--<h1><strong> Resume </strong></h1>-->
     <div class="row"> 
       <div class="col-md-offset-3 col-md-3">
         <!--Resume-->
-        <%= link_to "https://drive.google.com/open?id=0B9Dt_lzGChXNRGQ3ZVlUSFlQQVE", class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
-          Resume
+        <%= link_to "https://drive.google.com/open?id=0B9Dt_lzGChXNRGQ3ZVlUSFlQQVE", 
+        class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
+          <h3>Resume</h3>
         <% end %>
       </div>
       <div class="col-md-3">
         <!-- col-md-offset-4 -->
         <!--Resume-->
-        <%= link_to "https://drive.google.com/open?id=0B9Dt_lzGChXNNXRlR3R0S1I4bVk", class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
-          Long Resume
+        <%= link_to "https://drive.google.com/open?id=0B9Dt_lzGChXNNXRlR3R0S1I4bVk", 
+        class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
+          <h3>Long Resume</h3>
         <% end %>
       </div>
     </div>
    </div> <!-- /div row of Container for Resume -->
-
-  <br>
-  
+   
+</div> <!-- home-callout-parts text-center container-fluid 
   
   
   
